<resources>
    <string name="app_name">CrudAndroid</string>
    <string name="daftar">Daftar</string>
    <string name="nomor">Nomor</string>
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="l_atau_p">L atau P</string>
    <string name="kembali">Kembali</string>
    <string name="simpan">Simpan</string>
    <string name="textview">TextView</string>
    <string name="update">Update</string>
    <string name="alamat">Alamat</string>
    <string name="title_activity_updatebiodata">Update Biodata</string>
    <string name="title_activity_lihatbiodata">Lihat Biodata</string>
    <string name="title_activity_buatbiodata">Buat Biodata</string>
</resources>
