<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".LihatBiodata">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:text="@string/textview" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignEnd="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/textview" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/textview" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginTop="20dp"
        android:text="@string/textview" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginTop="20dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignBottom="@+id/textView5"
        android:text="@string/alamat"
        tools:ignore="UnknownId" />


    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignStart="@+id/TextView04"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_alignBottom="@+id/textView4"
        android:text="@string/jenis_kelamin" />


    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignStart="@+id/TextView02"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_alignBottom="@+id/textView3"
        android:text="@string/tanggal_lahir" />


    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignStart="@+id/TextView01"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:text="@string/nama" />


    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/nomor" />


    <Button
        android:id="@+id/button1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView05"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_marginTop="34dp"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
        android:text="@string/kembali"
        android:layout_alignStart="@+id/TextView05"
        android:drawableStart="@drawable/ic_arrow_back_black_24dp" />

</RelativeLayout>